--- a/Python/.editorconfig
+++ b/Python/.editorconfig
@@ -8,4 +8,4 @@ indent_style = tab
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
-end_of_line = lf
+end_of_line = cr
